fix: nav button on mobile

--- a/speaker.css
+++ b/speaker.css
@@ -1,8 +1,6 @@
 .speaker-view {
 	font-family: Helvetica;
 	font-size: 18px;
-	width: 100%;
-	overflow-x: hidden;
 }
 
 #wpadminbar {
@@ -204,6 +202,17 @@ button {
 }
 /* For mobile */
 @media only screen and (max-width: 768px) {
+	.speaker-view {
+		display: flex;
+		flex-direction: column-reverse;
+	}
+
+	.nav-controls {
+		position: fixed;
+		top: 16px;
+		right: 16px;
+	}
+
 	#slide-container,
 	#upcoming-slide-container,
 	.speaker-controls-time,
@@ -227,11 +236,6 @@ button {
 
 	#current-slide {
 		padding-top: 75%;
-	}
-
-	#current-slide iframe,
-	#upcoming-slide iframe {
-		transform: none;
 	}
 
 	.speaker-controls-time > div {
